--- a/chrome extension/manifest.json
+++ b/chrome extension/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 3,
-	"name": "TEFAS Extension 2",
+	"name": "123Tefas Extension",
 	"version": "1.0",
 	"content_scripts": [
 		{
@@ -14,6 +14,6 @@
 		"service_worker": "background.js"
 	},
 	"action": {
-		"default_icon": "ct.png"
+		"default_icon": "icon.png"
 	}
 }
