--- a/chrome extension/manifest.json
+++ b/chrome extension/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 3,
-	"name": "123Tefas Extension",
+	"name": "Tefas Extension",
 	"version": "1.0",
 	"content_scripts": [
 		{
@@ -14,6 +14,11 @@
 		"service_worker": "background.js"
 	},
 	"action": {
-		"default_icon": "icon.png"
-	}
+		"default_icon": "icon.png",
+		"default_popup": "popup.html",
+		"default_title" : "Tefas Extension"
+	},
+	"permissions": [
+	    "storage"
+	]
 }
