--- a/chrome extension/manifest.json
+++ b/chrome extension/manifest.json
@@ -1,7 +1,12 @@
 {
 	"manifest_version": 3,
-	"name": "Tefas Extension",
-	"version": "1.0",
+	"name": "Borsa Extension",
+	"version": "2.1",
+	"icons": {
+    	"16": "/images/icon16.png",
+    	"48": "/images/icon48.png",
+    	"128": "/images/icon128.png"
+  	},
 	"content_scripts": [
 		{
 			"matches": [
@@ -14,9 +19,9 @@
 		"service_worker": "background.js"
 	},
 	"action": {
-		"default_icon": "icon.png",
+		"default_icon": "/images/icon.png",
 		"default_popup": "popup.html",
-		"default_title" : "Tefas Extension"
+		"default_title" : "Borsa Extension"
 	},
 	"permissions": [
 	    "storage"
